--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <h1 style="color: #ffffff;">Que me dar o cú?</h1>
+    <h1 style="color: #ffffff;">Quer namorar comigo?</h1>
 	<button id="sim">Sim</button>
 	<button id="nao">Não</button>
 
