--- a/index.html
+++ b/index.html
@@ -1,18 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oi amor</title>
+    <title>Games Shop - A sua loja de games</title>
     <link rel="stylesheet" href="style.css">
-    
-</head>
-<body>
-    
-    <h1 style="color: #ffffff;">Quer namorar comigo?</h1>
-	<button id="sim">Sim</button>
-	<button id="nao">Não</button>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet"> 
 
-    <script src="script.js"></script>
+</head>
+
+<body>
+    <!-- MENU SUPERIOR -->
+    <header>
+        <div class="container">
+            <h1>Games Shop</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about">Sobre a loja</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contato</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- CORPO DO SITE -->
+    <section id="about">
+        <div class="container">
+            <img class="store-front" src="https://site-gamesshop.vercel.app/images/loja.jpg" alt="Fachada da loja Games Shop">
+            <div>
+                <h2>Sobre a loja</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit optio praesentium beatae ipsum iste
+                    eum eius. Magnam labore ea doloremque,
+                    ab voluptatem mollitia dignissimos similique tenetur voluptatibus! Accusamus, nobis optio.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit optio praesentium beatae ipsum iste
+                    eum eius. Magnam labore ea doloremque,
+                    ab voluptatem mollitia dignissimos similique tenetur voluptatibus! Accusamus, nobis optio.
+                </p>
+
+                <ul class="brands-list">
+                    <li><img src="https://site-gamesshop.vercel.app/images/nintendo.png" alt="Nintendo"></li>
+                    <li><img src="https://site-gamesshop.vercel.app/images/xbox.png" alt="Xbox"></li>
+                    <li><img src="https://site-gamesshop.vercel.app/images/playstation.png" alt="Playstation"></li>
+                </ul>
+            </div>
+
+        </div>
+
+    </section>
+
+    <section id="contact">
+        <div class="container">
+            <h2>Contato</h2>
+            <div class="contact-methods">
+                <div>
+                    <h3>Fale conosco</h3>
+                    <form>
+                        <input type="text" placeholder="Seu nome" required>
+                        <input type="email" placeholder="Seu E-mail" required>
+                        <input type="tel" placeholder="Seu telefone (opcional)">
+                        <textarea placeholder="Sua mensagem" required></textarea>
+                        <button type="submit">Enviar</button>
+                    </form>
+                </div>
+
+                <div>
+                    <h3>Nos acompanhe</h3>
+                    <ul class="social-links">
+                        <li>
+                            <a href="#" title="Siga-nos no Instagram">
+                                <img src="https://site-gamesshop.vercel.app/images/instagram.png" alt="Logo do Instagram">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" title="Siga-nos no Facebook">
+                                <img src="https://site-gamesshop.vercel.app/images/facebook.png" alt="Logo do Facebook">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" title="Visite nosso canal no Youtube">
+                                <img src="https://site-gamesshop.vercel.app/images/youtube.png" alt="Logo do Youtube">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3>Venha até nós</h3>
+                    <p>
+                        Rua JavaScript nº 124, Vila HTML - São Paulo -SP
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
